# OpenGL_3D_Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  cmake_install.cmake  conanfile.py  imgui.ini  launch.txt  rebuild.sh  start.sh
.github/: FUNDING.yml
includes/: app.h  buffer.h  camera.h  config.h  functions.h  grid.h  imgui-style.h  input_handler.h  light.h  menu_bar.h  mesh.h  object.h  ogl.h  ogl_window.h  render.h  scene_view.h  shader.h  ui.h  vertex.h  window.h
old/: old_main.cpp  setup.cpp  setup.h
shaders/: fragment.frag  fragment.txt  geometry.geom  light.frag  vertex.txt  vertex.vert
src/: app.cpp  buffer.cpp  camera.cpp  functions.cpp  grid.cpp  input_handler.cpp  main.cpp  menu_bar.cpp  mesh.cpp  object.cpp  ogl.cpp  ogl_window.cpp  scene_view.cpp  shader.cpp  ui.cpp
